--- a/core/template/dashboard/cmd.action.other.tvremote-app.html
+++ b/core/template/dashboard/cmd.action.other.tvremote-app.html
@@ -1,8 +1,10 @@
 <div class="cmd cmd-widget reportModeHidden" data-type="action" data-subtype="other" data-template="default" data-cmd_id="#id#" data-cmd_uid="#uid#" data-version="#version#" data-eqLogic_id="#eqLogic_id#">
     <div class="content">
-        <span class="imgCmd execute tooltips">
+        <a class="imgCmd execute tooltips">
+          <button class="imgCmd execute tooltips" style="background: none; border: none; padding: 0;">
             <img src="plugins/tvremote/data/images/oqee.png" alt="OQEE" style="width: 30px; height: 30px;">
-        </span>
+          </button>
+        </a>
     </div>
     <template></template>
     <script>
