--- a/core/template/dashboard/cmd.action.other.tvremote-app.html
+++ b/core/template/dashboard/cmd.action.other.tvremote-app.html
@@ -1,10 +1,8 @@
 <div class="cmd cmd-widget reportModeHidden" data-type="action" data-subtype="other" data-template="default" data-cmd_id="#id#" data-cmd_uid="#uid#" data-version="#version#" data-eqLogic_id="#eqLogic_id#">
     <div class="content">
-        <a class="imgCmd execute tooltips">
-          <button class="imgCmd execute tooltips" style="background: none; border: none; padding: 0;">
-            <img src="plugins/tvremote/data/images/oqee.png" alt="OQEE" style="width: 30px; height: 30px;">
-          </button>
-        </a>
+        <button class="imgCmd execute tooltips" style="background: none; border: none; padding: 0;">
+          <img src="plugins/tvremote/data/images/oqee.png" alt="OQEE" title="#name_display#" style="width: 30px; height: 30px;">
+        </button>
     </div>
     <template></template>
     <script>
