--- a/core/template/dashboard/cmd.action.other.tvremote-app.html
+++ b/core/template/dashboard/cmd.action.other.tvremote-app.html
@@ -26,6 +26,11 @@
         console.log('La variable #name# est différente de #name_display#')
         cmd.querySelector('.execute').setAttribute('title', '#name#')
       }
+
+      // console.log('Configuration : #configuration#')
+      let configuration = JSON.parse('#configuration#')
+      console.log('Configuration :', configuration)
+
     </script>
   </div>
   
