--- a/core/template/dashboard/cmd.action.other.tvremote-app.html
+++ b/core/template/dashboard/cmd.action.other.tvremote-app.html
@@ -28,7 +28,7 @@
       }
 
       // console.log('Configuration : #configuration#')
-      let configuration = JSON.parse('#configuration#')
+      let configuration = #configuration#
       console.log('Configuration :', configuration)
 
     </script>
