--- a/core/template/dashboard/cmd.action.other.tvremote-app.html
+++ b/core/template/dashboard/cmd.action.other.tvremote-app.html
@@ -28,7 +28,7 @@
       }
 
       // console.log('Configuration : #configuration#')
-      let configuration="#configuration#"
+      let configuration="#icon#"
       console.log('Configuration :', configuration)
 
     </script>
