--- a/core/template/mobile/cmd.action.other.tvremote-app.html
+++ b/core/template/mobile/cmd.action.other.tvremote-app.html
@@ -1,4 +1,4 @@
-<span class="cmd cmd-widget" data-type="action" data-subtype="other" data-template="default" data-cmd_id="#id#" data-cmd_uid="#uid#" data-version="#version#" data-eqLogic_id="#eqLogic_id#" data-Logical_Id="#logicalId#"></span>
+<span class="cmd cmd-widget" data-type="action" data-subtype="other" data-template="default" data-cmd_id="#id#" data-cmd_uid="#uid#" data-version="#version#" data-eqLogic_id="#eqLogic_id#" data-Logical_Id="#logicalId#">
   <center>
     <button class="imgCmd execute tooltips tippied" style="background: none; border: none; padding: 0;">
       <img src="plugins/tvremote/data/images/#logicalId#.png" alt="#name_display#" title="#name_display#" style="width: 35px; height: 35px;border-radius: inherit;">
