--- a/core/template/mobile/cmd.action.other.tvremote-app.html
+++ b/core/template/mobile/cmd.action.other.tvremote-app.html
@@ -1,6 +1,6 @@
 <span class="cmd cmd-widget" data-type="action" data-subtype="other" data-template="default" data-cmd_id="#id#" data-cmd_uid="#uid#" data-version="#version#" data-eqLogic_id="#eqLogic_id#" data-Logical_Id="#logicalId#">
   <center>
-    <button class="imgCmd execute tooltips tippied" style="background: none; border: none; padding: 0;">
+    <button class="imgCmd action ui-btn ui-mini ui-btn-inline ui-btn-raised">
       <img src="plugins/tvremote/data/images/#logicalId#.png" alt="#name_display#" title="#name_display#" style="width: 35px; height: 35px;border-radius: inherit;">
     </button>
   </center>
@@ -16,10 +16,10 @@
     if (prevElement?.hasClass('action-buttons')) {
       prevElement.appendChild(cmd)
     } else if (nextElement?.getAttribute('data-subtype') == 'other' && nextElement?.getAttribute('data-template') == 'default') {
-      let span = document.createElement('span')
-      span.setAttribute('class', 'action-buttons')
-      cmd.insertAdjacentElement('beforebegin', span)
-      span.appendChild(cmd)
+      let div = document.createElement('div')
+      div.setAttribute('class', 'action-buttons')
+      cmd.insertAdjacentElement('beforebegin', div)
+      div.appendChild(cmd)
     }
   
     if ('#name#' != '#name_display#') {
