--- a/core/template/mobile/cmd.action.other.tvremote-app.html
+++ b/core/template/mobile/cmd.action.other.tvremote-app.html
@@ -1,5 +1,5 @@
 <span class="cmd cmd-widget" data-type="action" data-subtype="other" data-template="default" data-cmd_id="#id#" data-cmd_uid="#uid#" data-version="#version#" data-eqLogic_id="#eqLogic_id#" data-Logical_Id="#logicalId#">
-  <button class="imgCmd action ui-btn-inline" style="background: none; border: none; padding: 0;"></button>
+  <button class="imgCmd action" style="background: none; border: none; padding: 0;"></button>
     <img src="plugins/tvremote/data/images/#logicalId#.png" alt="#name_display#" title="#name_display#" style="width: 35px; height: 35px;border-radius: inherit;">
   </button>
   <template></template>
