--- a/core/template/dashboard/cmd.action.other.tvremote-app.html
+++ b/core/template/dashboard/cmd.action.other.tvremote-app.html
@@ -1,8 +1,8 @@
 <div class="cmd cmd-widget reportModeHidden" data-type="action" data-subtype="other" data-template="default" data-cmd_id="#id#" data-cmd_uid="#uid#" data-version="#version#" data-eqLogic_id="#eqLogic_id#" data-Logical_Id="#logicalId#">
   <div class="content">
-    <button class="imgCmd execute tooltips tippied" style="background: none; border: none; padding: 0;">
+    <a class="imgCmd execute tooltips tippied ui-corner-all">
       <img src="plugins/tvremote/data/images/#logicalId#.png" alt="#name_display#" title="#name_display#" style="width: 35px; height: 35px;border-radius: inherit;">
-    </button>
+    </a>
   </div>
   <template></template>
   <script>
